--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=2.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Dove chat bot</title>
 	<link rel="stylesheet" href="styles.css">
@@ -9,7 +10,9 @@
 </head>
 <body>
 	<div id="wrapper" class="wrapper">
-		<div id="chatArea" class="chat-area">
+		<div class="chatarea-container">
+			<div id="chatArea" class="chat-area">
+		</div>
 			
 		</div>
 		<div class="input-area">
