--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=2.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Dove chat bot</title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
@@ -21,5 +21,6 @@
 		</div>
 	</div>
 </body>
-<script src="index.js"></script>
+<script src="js/utils.js"></script>
+<script src="js/index.js"></script>
 </html>
