added homescreen animation

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 <body>
 	<div id="wrapper" class="wrapper">
-		<div class="chatarea-container">
+		<div id="homeScreenContainer" class="homescreen-container">
+		</div>
+		<div id="chatAreaContainer" class="chatarea-container">
 			<div id="chatArea" class="chat-area">
 		</div>
-			
 		</div>
-		<div class="input-area">
+		<div id="inputArea" class="input-area">
 			<input id="inputMsg" placeholder="Type your msg here..." />
 			<button id="sendBtn" >Send</button>
 		</div>
