added scroll to bottom functionality

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 	<div id="wrapper" class="wrapper">
-		<div id="homeScreenContainer" class="homescreen-container">
-		</div>
+		<div id="homeScreenContainer" class="homescreen-container"></div>
 		<div id="chatAreaContainer" class="chatarea-container">
-			<div id="chatArea" class="chat-area">
-		</div>
+			<div class="chatarea-wrapper">
+				<div id="chatArea" class="chat-area"></div>
+			</div>
 		</div>
 		<div id="inputArea" class="input-area">
 			<input id="inputMsg" placeholder="Type your msg here..." />
