--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 				<div id="chatArea" class="chat-area"></div>
 			</div>
 		</div>
-		<div id="inputArea" class="input-area">
+		<form id="inputArea" class="input-area">
 			<input id="inputMsg" placeholder="Type your msg here..." />
 			<button id="sendBtn" >Send</button>
-		</div>
+		</form>
 	</div>
 </body>
 <script src="js/utils.js"></script>
